# work

./: Exam+Finite+method.ipynb  Panel+Data+in+financial+performance+assessment.ipynb  Quantifying+model+risk+of+risk+models.ipynb  Simulation+approach+on+estimating+credit+risk.html  Simulation+approach+on+estimating+credit+risk.ipynb  Variance+Reduction.ipynb
RiskManagement/: README.md  setup.cfg  setup.py
RiskManagement/RiskManagement/: ExtremeValue.py  HistoricalQuantile.py  KernelDensity.py  Normal.py  README.md  __init__.py
RiskManagement/package/: ExtremeValue.py
finance/: LICENSE.txt  README.md  models.py
finance/models/: BrownianMotion.py  InterestRate.py  README.md  Stock.py  __init__.py
finance/risk/: README.md  ValueAtRisk.py  __init__.py
finance/simulation/: StdBlackSchole.py
testdemo/: pom.xml
testdemo/src/main/java/com/example/demo/config/: WebSecurityConfig.java
testdemo/src/main/resources/: application.yml
testdemo/src/main/resources/static/: main.css
testdemo/src/main/resources/static/scripts/: editMaterial.js  editTask.js  plan.js  projectDetail.js  projects.js  uploadCsv.js
testdemo/src/main/resources/templates/: dashboard.html  editMaterial.html  editTask.html  hello.html  home.html  plan.html  projectDetail.html  projects.html  register.html  register_success.html  uploadCsv.html
testdemo/src/test/java/com/example/demo/: DemoApplicationTests.java  EcomRepositoryTests.java  FinanceRepositoryTests.java  MaterialRepositoryTests.java  PlanRepositoryTests.java  TaskRepositoryTests.java  UserRepositoryTests.java
(+38 files in other folders)
