[metadata]
# replace with your username:
name = package-DO-THU-HANG
version = 0.0.1
author = Thu-Hang DO
author_email = dothuhang156@gmail.com
description = Risk Management Tools package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dothuhang/work
project_urls =
    Bug Tracker = https://github.com/dothuhang/work/tree/master/RiskManagement
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6